--- a/ControleEmprestimos.csproj
+++ b/ControleEmprestimos.csproj
@@ -9,4 +9,8 @@
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
